--- a/ML.UD2.Supervised-FinalProject.ipynb
+++ b/ML.UD2.Supervised-FinalProject.ipynb
@@ -170,7 +170,9 @@
    "source": [
     "## 3. Preprocessing data\n",
     "\n",
-    "Lleva a cabo al menos 2 técnicas de preprocesado de datos. ¿Por qué las aplicas?\n"
+    "Lleva a cabo al menos 2 técnicas de preprocesado de datos. ¿Por qué las aplicas?\n",
+    "\n",
+    "La regresión logística y el árbol de decisiones se adaptan a las características de clasificación binaria del ejercicio, así como al tamaño del conjunto de datos y el número de características. Eso excluiría las regresión lineal y las SVM, por ejemplo.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -453,10 +455,10 @@
     }
    ],
    "source": [
-    "# Para árbol de decisión\n",
+    "# Para árbol de decisiones\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "ad_labelencoder = LabelEncoder()\n",
-    "df_campaign_train['job'] = ad_labelencoder.fit_transform(df_campaign_train['job']) # Obtenemos valores para las categorías.\n",
+    "df_campaign_train['job'] = ad_labelencoder.fit_transform(df_campaign_train['job']) # Obtenemos valores numéricos para las categorías.\n",
     "df_campaign_train['marital'] = ad_labelencoder.fit_transform(df_campaign_train['marital'])\n",
     "df_campaign_train['education'] = ad_labelencoder.fit_transform(df_campaign_train['education'])\n",
     "df_campaign_train['housing'] = ad_labelencoder.fit_transform(df_campaign_train['housing'])\n",
@@ -509,7 +511,7 @@
     "y = df_campaign_train['y']\n",
     "print(rlX.shape)\n",
     "\n",
-    "# Para árbol de decisión\n",
+    "# Para árbol de decisiones\n",
     "columnas_adX = df_campaign_train.columns.drop('y') # El dataset original tras el LabelEncoder.\n",
     "adX = df_campaign_train[columnas_adX]\n",
     "print(adX.shape)\n",
@@ -540,7 +542,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(rlX, y, test_size=0.30, random_state=42)\n",
     "\n",
-    "# Para árbol de decisión, no requerido.\n"
+    "# Para árbol de decisiones, no requerido.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -567,7 +569,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "rl = LogisticRegression(penalty='l2',solver='newton-cg')\n",
     "\n",
-    "# Para árbol de decisión\n",
+    "# Para árbol de decisiones\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "ad = DecisionTreeClassifier(max_depth=4) # Hiperparámetro. Profundidad máxima, 4 ramas."
    ],
@@ -616,7 +618,7 @@
     "# Para regresión logística\n",
     "rl.fit(X_train,y_train)\n",
     "\n",
-    "# Para árbol de decisión\n",
+    "# Para árbol de decisiones\n",
     "ad.fit(adX, y)"
    ],
    "metadata": {
@@ -669,7 +671,7 @@
     "print('Coeficientes: {}'.format(rl.coef_))  # Pesos en la función de decisión.\n",
     "print('Score: {}'.format(rl.score(X_test, y_test))) # La precisión media de predicción de etiqueta para esta muestra.\n",
     "\n",
-    "# Para árbol de decisión\n",
+    "# Para árbol de decisiones\n",
     "from sklearn.tree import export_graphviz\n",
     "export_graphviz(ad,\n",
     "                out_file='./img/ad.dot',\n",
@@ -748,7 +750,7 @@
     }
    ],
    "source": [
-    "# Para árbol de decisión\n",
+    "# Para árbol de decisiones\n",
     "ad.predict_proba([[44,1,1,0,2,0,210,1,1.4,93.444,-36.1,4.963]]) # Dato real de ejemplo."
    ],
    "metadata": {
@@ -834,7 +836,7 @@
    "execution_count": 144,
    "outputs": [],
    "source": [
-    "# Para árbol de decisión"
+    "# Para árbol de decisiones"
    ],
    "metadata": {
     "collapsed": false,
